--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Painel Robo BR Fiscal - Autoridade Cristian</title>
+    <title>Painel Robo BR Fiscal - SENTINELA V12</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @media print { .no-print { display: none; } #cupom-fiscal { display: block !important; } }
@@ -14,7 +14,7 @@
         <div class="bg-black p-8 text-white flex justify-between items-center">
             <div>
                 <h1 class="text-3xl font-bold tracking-tighter">ROBÔ BR FISCAL</h1>
-                <p class="opacity-70 text-sm uppercase tracking-widest">Sentinela Governamental Cristian</p>
+                <p class="opacity-70 text-sm uppercase tracking-widest">Sentinela PARTNER</p>
             </div>
             <div class="text-right">
                 <span class="text-xs block opacity-50">CNPJ MONITORADO</span>
