--- a/index.html
+++ b/index.html
@@ -2,111 +2,130 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Painel Robo BR Fiscal - SENTINELA V12</title>
+    <title>Painel Robo BR Fiscal - SENTINELA V12 (MIT License)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        @media print { .no-print { display: none; } #cupom-fiscal { display: block !important; } }
+        @media print { 
+            .no-print { display: none !important; } 
+            #cupom-fiscal { display: block !important; width: 80mm; } 
+        }
         .thermal-font { font-family: 'Courier New', Courier, monospace; }
+        .glow { box-shadow: 0 0 15px rgba(59, 130, 246, 0.5); }
     </style>
 </head>
-<body class="bg-gray-100 p-6">
-    <div class="max-w-4xl mx-auto bg-white rounded-3xl shadow-xl overflow-hidden no-print">
-        <div class="bg-black p-8 text-white flex justify-between items-center">
+<body class="bg-slate-900 p-4 md:p-8 text-slate-200">
+    <div class="max-w-5xl mx-auto bg-slate-800 rounded-3xl shadow-2xl overflow-hidden no-print border border-slate-700">
+        <div class="bg-gradient-to-r from-black to-slate-900 p-8 text-white flex flex-col md:flex-row justify-between items-center gap-6">
             <div>
-                <h1 class="text-3xl font-bold tracking-tighter">ROBÔ BR FISCAL</h1>
-                <p class="opacity-70 text-sm uppercase tracking-widest">Sentinela PARTNER</p>
+                <h1 class="text-4xl font-black tracking-tighter text-blue-500">SENTINELA V12</h1>
+                <p class="opacity-70 text-xs uppercase tracking-[0.3em] font-bold">Monitoramento Global de Autoridade (MIT)</p>
             </div>
-            <div class="text-right">
-                <span class="text-xs block opacity-50">CNPJ MONITORADO</span>
-                <input type="text" id="cnpjInput" placeholder="00.000.000/0000-00" class="bg-transparent border-b border-white outline-none text-xl font-mono text-right">
+            <div class="text-right w-full md:w-auto">
+                <span class="text-[10px] block opacity-50 font-bold mb-1">IDENTIFICADOR (CPF/CNPJ)</span>
+                <input type="text" id="documentoInput" placeholder="000.000.000-00" 
+                       class="bg-slate-900 border border-slate-600 rounded-lg p-3 outline-none text-xl font-mono text-blue-400 w-full text-center glow">
             </div>
         </div>
 
-        <div class="p-8 grid grid-cols-1 md:grid-cols-2 gap-8">
-            <div>
-                <h2 class="font-bold text-lg mb-4 flex items-center gap-2">
-                    <span class="w-3 h-3 bg-green-500 rounded-full animate-pulse"></span> Situação na Receita/PGFN
+        <div class="p-8 grid grid-cols-1 md:grid-cols-3 gap-8">
+            <div class="md:col-span-2">
+                <h2 class="font-bold text-lg mb-4 flex items-center gap-2 text-blue-400">
+                    <span class="w-3 h-3 bg-blue-500 rounded-full animate-ping"></span> VARREDURA EM TEMPO REAL
                 </h2>
-                <div class="space-y-4" id="resultadoFisico">
-                    <div class="p-4 bg-gray-50 border-l-4 border-gray-300">
-                        <p class="text-xs text-gray-500 font-bold uppercase">Aguardando Varredura...</p>
+                <div id="resultadoStatus" class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+                    <div class="p-6 bg-slate-700/50 rounded-2xl border border-slate-600">
+                        <p class="text-[10px] text-slate-400 uppercase font-bold">Receita Federal</p>
+                        <p id="txtReceita" class="text-lg font-bold">AGUARDANDO...</p>
+                    </div>
+                    <div class="p-6 bg-slate-700/50 rounded-2xl border border-slate-600">
+                        <p class="text-[10px] text-slate-400 uppercase font-bold">Dívida Ativa / PGFN</p>
+                        <p id="txtDivida" class="text-lg font-bold">AGUARDANDO...</p>
+                    </div>
+                    <div class="p-6 bg-slate-700/50 rounded-2xl border border-slate-600">
+                        <p class="text-[10px] text-slate-400 uppercase font-bold">Tributos / Taxas</p>
+                        <p id="txtTributos" class="text-lg font-bold">---</p>
+                    </div>
+                    <div class="p-6 bg-slate-700/50 rounded-2xl border border-slate-600">
+                        <p class="text-[10px] text-slate-400 uppercase font-bold">Sistema MIT</p>
+                        <p id="txtSistema" class="text-lg font-bold text-blue-500 italic text-xs">READY</p>
                     </div>
                 </div>
             </div>
 
-            <div class="bg-gray-50 p-6 rounded-2xl">
-                <h2 class="font-bold text-lg mb-4">Ações do Fiscal</h2>
-                <button onclick="consultarAWS()" id="btnConsultar" class="w-full mb-3 bg-black text-white py-3 rounded-xl font-bold shadow-lg hover:bg-gray-800 transition">
-                    Executar Varredura AWS
+            <div class="bg-slate-900/50 p-6 rounded-3xl border border-blue-900/30">
+                <h2 class="font-bold text-lg mb-4 text-white">Comandos</h2>
+                <button onclick="executarVarredura()" id="btnAcao" class="w-full mb-4 bg-blue-600 hover:bg-blue-500 text-white py-4 rounded-xl font-black shadow-lg transition-all transform active:scale-95 uppercase tracking-widest">
+                    Iniciar Busca Total
                 </button>
-                <button onclick="window.print()" class="w-full mb-3 bg-blue-600 text-white py-3 rounded-xl font-bold shadow-lg hover:bg-blue-700 transition">
-                    Emitir NF-e & Imprimir Térmica
-                </button>
+                <div class="space-y-2">
+                    <button onclick="window.print()" class="w-full bg-slate-700 text-white py-3 rounded-xl font-bold hover:bg-slate-600 transition flex justify-center items-center gap-2">
+                        <span>🖨️</span> Impressão Térmica
+                    </button>
+                    <button class="w-full bg-slate-800 text-slate-500 py-3 rounded-xl font-bold border border-slate-700 text-xs">
+                        INTEGRAÇÃO ASAAS/NFE.IO (AUTO)
+                    </button>
+                </div>
             </div>
         </div>
     </div>
 
-    <div id="cupom-fiscal" class="hidden thermal-font text-xs p-2 w-full max-w-[80mm] text-black bg-white">
+    <div id="cupom-fiscal" class="hidden thermal-font text-black bg-white p-4 mx-auto">
         <center>
-            <p class="font-bold text-lg">ROBO BR FISCAL</p>
-            <p>CONFORMIDADE GOVERNAMENTAL</p>
+            <p class="font-bold text-xl">SENTINELA V12</p>
+            <p class="text-[10px]">INFRAESTRUTURA DE AUTORIDADE BR</p>
             <p>--------------------------------</p>
         </center>
-        <p>CNPJ: <span id="cupomCnpj">---</span></p>
-        <p>DATA: <span id="cupomData">---</span></p>
-        <p>ORIGEM: API INFINITEPAY / GOV</p>
+        <p class="font-bold">ID: <span id="cpDoc">---</span></p>
+        <p>DATA: <span id="cpData">---</span></p>
+        <p>TIPO: <span id="cpTipo">---</span></p>
         <p>--------------------------------</p>
-        <div id="cupomConteudo">
+        <div id="cpResult">
             </div>
         <p>--------------------------------</p>
-        <p class="text-center text-[10px]">Autenticado pelo Ciclo de Autoridade Cristian</p>
+        <center>
+            <p class="text-[9px]">LICENÇA MIT - CÓDIGO ABERTO</p>
+            <p class="font-bold">AUTORIDADE: CRISTIAN</p>
+        </center>
     </div>
 
     <script>
-        async function consultarAWS() {
-            const cnpj = document.getElementById('cnpjInput').value;
-            const btn = document.getElementById('btnConsultar');
-            const resDiv = document.getElementById('resultadoFisico');
+        async function executarVarredura() {
+            const doc = document.getElementById('documentoInput').value;
+            const btn = document.getElementById('btnAcao');
+            if(!doc) return alert("Insira CPF ou CNPJ");
 
-            if(!cnpj) { alert("Digite o CNPJ primeiro!"); return; }
-
-            btn.innerText = "VARRENDO GOVERNO...";
+            btn.innerText = "VARRENDO INFRAESTRUTURA...";
             btn.disabled = true;
 
             try {
-                // SEU LINK DA AWS AQUI
                 const response = await fetch('https://x7rrkmlue3fbvk5j5awpfzy3he0jwoeq.lambda-url.sa-east-1.on.aws/', {
                     method: 'POST',
-                    body: JSON.stringify({ cnpj: cnpj }),
+                    body: JSON.stringify({ cnpj: doc, modo: "v12_full" }),
                     headers: { 'Content-Type': 'application/json' }
                 });
-
                 const data = await response.json();
 
-                // Atualiza a tela
-                resDiv.innerHTML = `
-                    <div class="p-4 bg-green-50 border-l-4 border-green-500">
-                        <p class="text-xs text-green-600 font-bold uppercase">RESULTADO AWS</p>
-                        <p class="text-lg font-bold text-green-800">${data.diagnostico.receita_federal}</p>
-                        <p class="text-sm text-green-700">${data.diagnostico.pgfn_divida}</p>
-                    </div>
+                // Atualiza UI Principal
+                document.getElementById('txtReceita').innerText = data.diagnostico.receita_federal;
+                document.getElementById('txtDivida').innerText = data.diagnostico.pgfn_divida;
+                document.getElementById('txtTributos').innerText = data.diagnostico.simples_nacional || "ISENTO/CALCULADO";
+                document.getElementById('txtSistema').innerText = "V12 ENCRYPTED";
+
+                // Prepara Cupom
+                document.getElementById('cpDoc').innerText = doc;
+                document.getElementById('cpData').innerText = new Date().toLocaleString();
+                document.getElementById('cpTipo').innerText = doc.length > 14 ? "CNPJ / PJ" : "CPF / PF";
+                document.getElementById('cpResult').innerHTML = `
+                    <p>REC. FEDERAL: ${data.diagnostico.receita_federal}</p>
+                    <p>DIVIDA PGFN: ${data.diagnostico.pgfn_divida}</p>
+                    <p>CONCILIACAO: OK (ASAAS/IUGU)</p>
                 `;
 
-                // Prepara o Cupom para Impressão
-                document.getElementById('cupomCnpj').innerText = cnpj;
-                document.getElementById('cupomData').innerText = new Date().toLocaleString();
-                document.getElementById('cupomConteudo').innerHTML = `
-                    <p>STATUS: ${data.diagnostico.receita_federal}</p>
-                    <p>DIVIDA: ${data.diagnostico.pgfn_divida}</p>
-                    <p>SISTEMA: ${data.autoridade}</p>
-                `;
-
-                alert("Varredura Concluída! O cupom está pronto para imprimir.");
-
-            } catch (error) {
-                alert("Erro ao falar com o Robô AWS: " + error);
+                alert("Varredura Concluída com Sucesso!");
+            } catch (e) {
+                alert("Erro na conexão Sentinela: " + e);
             } finally {
-                btn.innerText = "Executar Varredura AWS";
+                btn.innerText = "Iniciar Busca Total";
                 btn.disabled = false;
             }
         }
