--- a/index.html
+++ b/index.html
@@ -2,66 +2,122 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Painel Robo BR Fiscal - Autoridade Cristian</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Robô BR Fiscal - Cristian V2.0</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        @media print { .no-print { display: none; } }
-        .thermal-font { font-family: 'Courier New', Courier, monospace; }
+        @media print { .no-print { display: none; } #cupom-termico { display: block !important; } }
+        .font-mono { font-family: 'Courier New', Courier, monospace; }
+        .gradient-custom { background: linear-gradient(135deg, #000000 0%, #1a1a1a 100%); }
     </style>
 </head>
-<body class="bg-gray-100 p-6">
-    <div class="max-w-4xl mx-auto bg-white rounded-3xl shadow-xl overflow-hidden">
-        <div class="bg-black p-8 text-white flex justify-between items-center">
-            <div>
-                <h1 class="text-3xl font-bold tracking-tighter">ROBÔ BR FISCAL</h1>
-                <p class="opacity-70 text-sm uppercase tracking-widest">Sentinela de Conformidade Governamental</p>
-            </div>
-            <div class="text-right">
-                <span class="text-xs block opacity-50">CNPJ MONITORADO</span>
-                <input type="text" placeholder="00.000.000/0000-00" class="bg-transparent border-b border-white outline-none text-xl font-mono text-right">
-            </div>
-        </div>
+<body class="bg-gray-50 min-h-screen">
 
-        <div class="p-8 grid grid-cols-1 md:grid-cols-2 gap-8">
-            <div>
-                <h2 class="font-bold text-lg mb-4 flex items-center gap-2">
-                    <span class="w-3 h-3 bg-red-500 rounded-full animate-pulse"></span> Situação na Receita/PGFN
+    <div class="no-print max-w-4xl mx-auto p-4 md:p-10">
+        <header class="flex flex-col md:flex-row justify-between items-center mb-10 gap-4">
+            <div class="text-center md:text-left">
+                <h1 class="text-3xl font-black tracking-tighter text-black">ROBÔ BR FISCAL 🚀</h1>
+                <p class="text-sm text-gray-500 font-bold uppercase tracking-widest">Nível de Autoridade: Cristian</p>
+            </div>
+            <div class="bg-white p-4 rounded-2xl shadow-xl border border-gray-100 w-full md:w-auto">
+                <label class="text-[10px] text-gray-400 block uppercase font-bold">Digitar CNPJ para Varredura</label>
+                <input type="text" id="cnpj-input" placeholder="00.000.000/0000-00" 
+                       class="text-xl font-mono font-bold outline-none text-blue-600 w-full">
+            </div>
+        </header>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+            <div class="bg-white p-8 rounded-3xl shadow-sm border border-gray-100">
+                <h2 class="text-lg font-bold mb-4 flex items-center gap-2">
+                    <span class="w-3 h-3 bg-green-500 rounded-full animate-ping"></span> Status do Governo
                 </h2>
-                <div class="space-y-4">
-                    <div class="p-4 bg-red-50 border-l-4 border-red-500">
-                        <p class="text-xs text-red-600 font-bold">DÉBITO DAS ENCONTRADO</p>
-                        <p class="text-lg font-bold text-red-800">R$ 1.250,40</p>
-                    </div>
-                    <div class="p-4 bg-green-50 border-l-4 border-green-500">
-                        <p class="text-xs text-green-600 font-bold">DÍVIDA ATIVA (PGFN)</p>
-                        <p class="text-lg font-bold text-green-800">NADA CONSTA</p>
-                    </div>
+                <div id="status-container" class="space-y-3">
+                    <p class="text-gray-400 text-sm">Aguardando comando...</p>
                 </div>
-            </div>
-
-            <div class="bg-gray-50 p-6 rounded-2xl">
-                <h2 class="font-bold text-lg mb-4">Ações do Fiscal</h2>
-                <button onclick="window.print()" class="w-full mb-3 bg-blue-600 text-white py-3 rounded-xl font-bold shadow-lg hover:bg-blue-700 transition">
-                    Emitir NF-e & Imprimir Térmica
-                </button>
-                <button class="w-full bg-black text-white py-3 rounded-xl font-bold shadow-lg hover:bg-gray-800 transition">
-                    Gerar Guia DAS (Simples Nacional)
+                <button onclick="dispararRobo()" id="btn-acao" class="w-full mt-6 bg-black text-white py-4 rounded-2xl font-bold hover:bg-gray-800 transition-all shadow-lg">
+                    INICIAR VARREDURA FISCAL
                 </button>
             </div>
-        </div>
 
-        <div id="cupom-fiscal" class="hidden print:block thermal-font text-xs p-2 w-full max-w-[80mm]">
-            <p class="text-center font-bold">ROBO BR FISCAL - EMISSÃO</p>
-            <p>--------------------------------</p>
-            <p>CNPJ: 00.000.000/0001-00</p>
-            <p>DATA: 10/01/2026 23:30</p>
-            <p>VENDA ORIGEM: INFINITEPAY</p>
-            <p>--------------------------------</p>
-            <p class="text-lg font-bold">TOTAL: R$ 500,00</p>
-            <p>CHAVE NF-E: 352201...</p>
-            <p>--------------------------------</p>
-            <p class="text-center text-[10px]">Autenticado pelo Ciclo de Autoridade Cristian</p>
+            <div class="bg-gray-900 p-8 rounded-3xl shadow-2xl text-white">
+                <h2 class="text-lg font-bold mb-4">Ações de Emissão</h2>
+                <div class="space-y-4">
+                    <button onclick="imprimirTermica()" class="w-full bg-blue-600 py-3 rounded-xl font-bold hover:bg-blue-500 flex items-center justify-center gap-2">
+                        <span>🖨️</span> Imprimir Nota Térmica
+                    </button>
+                    <button class="w-full bg-gray-800 py-3 rounded-xl font-bold border border-gray-700 opacity-50 cursor-not-allowed">
+                        Gerar Guia DAS (Simples)
+                    </button>
+                </div>
+                <p class="mt-6 text-[10px] text-gray-500 text-center uppercase tracking-widest">Integrado com InfinitePay API</p>
+            </div>
         </div>
     </div>
+
+    <div id="cupom-termico" class="hidden font-mono text-[12px] p-4 w-[80mm] bg-white text-black">
+        <center>
+            <p class="font-bold">ROBÔ BR FISCAL</p>
+            <p>CONFORMIDADE GOVERNAMENTAL</p>
+            <p>--------------------------------</p>
+        </center>
+        <p>CNPJ: <span id="print-cnpj"></span></p>
+        <p>DATA: <span id="print-data"></span></p>
+        <p>ORIGEM: API INFINITEPAY</p>
+        <p>--------------------------------</p>
+        <p class="font-bold">STATUS FISCAL: REGULAR</p>
+        <p>DÍVIDA ATIVA: NADA CONSTA</p>
+        <p>RECEITA FEDERAL: OK</p>
+        <p>--------------------------------</p>
+        <p class="text-center font-bold text-lg">NF-E EMITIDA COM SUCESSO</p>
+        <p class="text-[10px] text-center">Autenticação: AWS-LAMBDA-CRISTIAN-2026</p>
+    </div>
+
+    <script>
+        async function dispararRobo() {
+            const cnpj = document.getElementById('cnpj-input').value;
+            const btn = document.getElementById('btn-acao');
+            const container = document.getElementById('status-container');
+
+            if(!cnpj) { alert("Por favor, digite o CNPJ."); return; }
+
+            btn.innerText = "PROCESSANDO NA AWS...";
+            btn.disabled = true;
+
+            try {
+                const response = await fetch('https://x7rrkmlue3fbvk5j5awpfzy3he0jwoeq.lambda-url.sa-east-1.on.aws/', {
+                    method: 'POST',
+                    body: JSON.stringify({ cnpj: cnpj }),
+                    headers: { 'Content-Type': 'application/json' }
+                });
+
+                const data = await response.json();
+
+                container.innerHTML = `
+                    <div class="p-3 bg-green-50 rounded-xl border border-green-100">
+                        <p class="text-xs text-green-600 font-bold uppercase">Receita Federal</p>
+                        <p class="font-bold text-gray-800">${data.diagnostico.receita_federal}</p>
+                    </div>
+                    <div class="p-3 bg-blue-50 rounded-xl border border-blue-100">
+                        <p class="text-xs text-blue-600 font-bold uppercase">Dívida Ativa</p>
+                        <p class="font-bold text-gray-800">${data.diagnostico.pgfn_divida}</p>
+                    </div>
+                `;
+                
+                document.getElementById('print-cnpj').innerText = cnpj;
+                document.getElementById('print-data').innerText = new Date().toLocaleString();
+                alert("Robô BR Fiscal: Varredura concluída com sucesso!");
+
+            } catch (error) {
+                alert("Erro ao conectar com o robô AWS. Verifique o link.");
+            } finally {
+                btn.innerText = "INICIAR VARREDURA FISCAL";
+                btn.disabled = false;
+            }
+        }
+
+        function imprimirTermica() {
+            window.print();
+        }
+    </script>
 </body>
 </html>
