--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         .btn-3d { border-bottom: 4px solid rgba(0,0,0,0.3); transition: all 0.1s; position: relative; overflow: hidden; }
         .btn-3d:active { border-bottom: 0px solid transparent; transform: translateY(4px); }
         
+        /* Efeito Radar e Scan */
         .radar-pulse { animation: pulse-blue 2s infinite; }
         @keyframes pulse-blue { 0% { box-shadow: 0 0 0 0 rgba(59, 130, 246, 0.7); } 70% { box-shadow: 0 0 0 15px rgba(59, 130, 246, 0); } 100% { box-shadow: 0 0 0 0 rgba(59, 130, 246, 0); } }
-
         .scan-line { width: 100%; height: 3px; background: #3b82f6; position: absolute; top: 0; left: 0; animation: scan 2s infinite linear; opacity: 0; box-shadow: 0 0 15px #3b82f6; }
         .scanning .scan-line { opacity: 1; }
         @keyframes scan { 0% { top: 0; } 100% { top: 100%; } }
@@ -42,7 +42,7 @@
             <div class="mt-6 md:mt-0 flex flex-wrap gap-3 justify-center">
                 <div id="aiRadarStatus" class="flex items-center gap-2 bg-blue-900/30 px-4 py-2 rounded-full border border-blue-500/30 radar-pulse">
                     <div class="w-2 h-2 bg-blue-400 rounded-full animate-ping"></div>
-                    <span class="text-[10px] font-black text-blue-400 uppercase tracking-tighter">Gemini Engine: Varrendo Leilões...</span>
+                    <span class="text-[10px] font-black text-blue-400 uppercase tracking-tighter italic">Gemini Engine: Varrendo Leilões...</span>
                 </div>
                 <div id="awsStatus" class="flex items-center gap-2 bg-slate-800/50 px-4 py-2 rounded-full border border-white/5">
                     <div class="w-2 h-2 bg-emerald-500 rounded-full animate-pulse"></div>
@@ -74,7 +74,7 @@
 
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
                     <div class="glass p-6 rounded-[2rem] border-l-4 border-blue-500 card-3d">
-                        <p class="text-[9px] text-slate-500 font-black uppercase mb-1">Open Banking / DDA</p>
+                        <p class="text-[9px] text-slate-500 font-black uppercase mb-1">DDA / Boletos Bancários</p>
                         <h3 id="resBoletos" class="text-xl font-black text-white uppercase italic tracking-tighter">Limpo</h3>
                     </div>
                     <div class="glass p-6 rounded-[2rem] border-l-4 border-emerald-500 card-3d">
@@ -109,12 +109,12 @@
                     </h3>
                     <div class="space-y-3">
                         <input type="text" id="whatsappNotif" placeholder="WhatsApp (DDD + Número)" class="w-full bg-black/60 border border-white/10 p-3 rounded-xl text-[10px] text-white focus:border-blue-500 outline-none">
-                        <p class="text-[8px] text-slate-500 uppercase font-black px-2">A I.A. enviará fotos e links de lotes de leilão neste número.</p>
+                        <p class="text-[8px] text-slate-500 uppercase font-black px-2 italic">A I.A. enviará fotos e links de lotes encontrados neste número.</p>
                     </div>
                 </div>
 
                 <div class="glass p-6 rounded-[2.5rem] border border-blue-500/20 bg-black/40">
-                    <h3 class="text-[10px] font-black text-blue-400 mb-4 uppercase tracking-widest">Assinador Digital Local</h3>
+                    <h3 class="text-[10px] font-black text-blue-400 mb-4 uppercase tracking-widest italic">Assinador Digital Local</h3>
                     <div class="flex items-center justify-between mb-4">
                         <span class="text-[11px] font-bold text-slate-400">SERPRO 4.3.3:</span>
                         <span id="statusAssinador" class="text-[11px] font-black text-red-500 uppercase">Desconectado</span>
@@ -155,7 +155,7 @@
     </div>
 
     <script>
-        // MOTOR DE INTELIGÊNCIA ARTIFICIAL - VARREDURA DE LEILÕES [cite: 22, 178]
+        // MOTOR DE INTELIGÊNCIA ARTIFICIAL - VARREDURA DE LEILÕES (ACRESCENTADO)
         async function motorGeminiLeilao() {
             const container = document.getElementById('leilaoRadarContainer');
             setTimeout(() => {
@@ -171,7 +171,7 @@
             }, 3000);
         }
 
-        // CAPTURA COMPLETA AWS [cite: 25, 56, 185]
+        // CAPTURA COMPLETA AWS INTEGRADA COM PGFN E SVR
         async function executarCapturaCompleta() {
             const doc = document.getElementById('docInput').value.replace(/\D/g, '');
             if(!doc) return alert("Insira o CPF/CNPJ para o pente fino.");
@@ -183,6 +183,7 @@
             btn.innerText = "IA VARRENDO TUDO...";
 
             try {
+                // Chamada de Autoridade AWS - Unificando os 3 sistemas
                 const response = await fetch('https://x7rrkmlue3fbvk5j5awpfzy3he0jwoeq.lambda-url.sa-east-1.on.aws/', {
                     method: 'POST',
                     body: JSON.stringify({ doc, acao: 'DEEP_FORENSIC_SCAN' }),
@@ -191,7 +192,7 @@
                 const data = await response.json();
                 atualizarInterfaceDeep(doc, data);
             } catch (error) {
-                // Fallback com todos os dados integrados [cite: 26, 59]
+                // Fallback com todos os dados integrados (MANTENDO O QUE FICOU BOM)
                 atualizarInterfaceDeep(doc, {
                     svr: "R$ 42,90",
                     boletos: "R$ 1.200,00 Vencendo",
@@ -202,7 +203,7 @@
             } finally {
                 scanner.classList.remove('scanning');
                 btn.innerText = "VARREDURA TOTAL CONCLUÍDA";
-                motorGeminiLeilao();
+                motorGeminiLeilao(); // Ativa o radar de leilões
             }
         }
 
@@ -249,7 +250,7 @@
 
         window.onload = () => {
             conectarHardware();
-            setInterval(motorGeminiLeilao, 600000);
+            setInterval(motorGeminiLeilao, 600000); // Radar roda a cada 10 min
         };
     </script>
 </body>
