--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                 
                 // Atualiza Investimentos
                 document.getElementById('resInvest').innerHTML = `
-                    <p>• Ações B3: R$ ${seed * 140},00</p>
-                    <p>• Tesouro Direto: R$ ${seed * 220},00</p>
-                    <p>• Dividendos: R$ ${seed * 12},30</p>
+                    <p>• Ações B3: R$ ${seed},00</p>
+                    <p>• Tesouro Direto: R$ ${seed},00</p>
+                    <p>• Dividendos: R$ ${seed},30</p>
                 `;
 
                 // Radar de Leilões
