--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SENTINELA V12 - ISRAEL INTELLIGENCE EDITION</title>
+    <title>SENTINELA V12 - INTELLIGENCE EDITION</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Playfair+Display:wght@700&family=Courier+Prime&display=swap" rel="stylesheet">
     <style>
@@ -36,17 +36,17 @@
                     <div class="w-20 h-20 bg-white rounded-full flex items-center justify-center overflow-hidden border-4 border-blue-600 shadow-2xl">
                          <span class="text-blue-900 font-black text-2xl italic">S12</span>
                     </div>
-                    <div class="absolute -bottom-2 -right-2 bg-blue-600 text-[8px] font-bold px-2 py-1 rounded">MOSAD GRADE</div>
+                    <div class="absolute -bottom-2 -right-2 bg-blue-600 text-[8px] font-bold px-2 py-1 rounded"></div>
                 </div>
                 <div>
-                    <h1 class="text-3xl font-black tracking-tighter uppercase italic">Sentinela <span class="text-blue-500">V12 Israel</span></h1>
-                    <p class="text-[10px] tracking-[0.4em] text-slate-500 uppercase font-bold">Advanced Fiscal Intelligence - Cristian</p>
+                    <h1 class="text-3xl font-black tracking-tighter uppercase italic">Sentinela <span class="text-blue-500">V12</span></h1>
+                    <p class="text-[10px] tracking-[0.4em] text-slate-500 uppercase font-bold">Advanced Fiscal Intelligence</p>
                 </div>
             </div>
             <div class="flex gap-4 mt-6 md:mt-0">
                 <div class="text-right">
                     <p class="text-[10px] font-black text-emerald-500">CONEXÃO: SEFAZ G2G 🟢</p>
-                    <p class="text-[10px] font-black text-blue-400">ASAAS API: READY 🔵</p>
+                    <p class="text-[10px] font-black text-blue-400">ASAAS: READY 🔵</p>
                 </div>
             </div>
         </header>
@@ -76,7 +76,7 @@
                     📄 Nota Fiscal SEFAZ (A4)
                 </button>
                 <button onclick="gerarSaida('TERMICA')" class="w-full border-2 border-blue-600 text-blue-500 py-4 rounded-xl font-black uppercase hover:bg-blue-600 hover:text-white transition-all">
-                    🧾 Cupom Térmico (80mm)
+                    🧾 Cupom Térmico (180mm)
                 </button>
                 
                 <div class="pt-6">
