--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SENTINELA V12 - REFORMA TRIBUTÁRIA 2026</title>
+    <title>SENTINELA V12 - TRIBUTÁRIA</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;700;900&family=JetBrains+Mono&display=swap" rel="stylesheet">
     <style>
@@ -90,13 +90,13 @@
 
                 <div class="log-terminal rounded-xl shadow-inner" id="terminalLog">
                     [SYSTEM] Aguardando entrada de dados...<br>
-                    [V12] Motor de Reforma Tributária 2026 carregado (IBS/CBS).<br>
+                    [V12] Motor de Reforma Tributária (IBS/CBS).<br>
                 </div>
             </div>
 
             <div class="lg:col-span-4 space-y-4">
                 <div class="cyber-card p-6 rounded-3xl bg-blue-500/5 border-t-4 border-blue-400">
-                    <h3 class="text-center text-[10px] font-black uppercase mb-4 tracking-widest text-blue-400 italic">Cálculo Tributário 2026</h3>
+                    <h3 class="text-center text-[10px] font-black uppercase mb-4 tracking-widest text-blue-400 italic">Cálculo Tributário </h3>
                     
                     <div class="space-y-3 text-sm">
                         <div class="flex justify-between border-b border-white/5 pb-2">
