--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div>
                     <h1 class="text-3xl font-black uppercase italic tracking-tighter">Sentinela <span class="text-cyan-400">V12</span></h1>
-                    <p class="text-[9px] tracking-[0.4em] text-slate-500 font-bold uppercase">Fiscal Command - Reforma 2026</p>
+                    <p class="text-[9px] tracking-[0.4em] text-slate-500 font-bold uppercase">Fiscal Nota</p>
                 </div>
             </div>
             
@@ -123,7 +123,7 @@
                         📄 Assinar e Transmitir A4
                     </button>
                     <button onclick="gerar('TERMICA')" class="w-full border border-cyan-500 text-cyan-400 py-4 rounded-xl font-black uppercase text-xs hover:bg-cyan-500 hover:text-white transition-all">
-                        🧾 Recibo Térmico 80mm
+                        🧾 Recibo Térmico 180mm
                     </button>
                 </div>
             </div>
