--- a/index.html
+++ b/index.html
@@ -20,11 +20,18 @@
         
         /* LOGO SVG QUE NÃO QUEBRA */
         .v12-logo-shield {
-            width: 50px; height: 50px;
-            background: var(--blue-israel);
-            clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-            display: flex; align-items: center; justify-content: center;
-            border: 2px solid white;
+            <body><noscript><style>
+            .noscript-container {
+                font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+                min-height: 100vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background: linear-gradient(135deg, #667eea 0%, #667eFF 50%);
+                margin: 0;
+                padding: 20px;
+                box-sizing: border-box;
+            }
         }
 
         /* Linha de Progresso Estilo Israel */
