--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
                         <h2 class="text-xl font-black text-slate-700 uppercase italic">Central de Emissão Síncrona</h2>
                     </div>
 
+                         </div>
+
                     <div class="grid grid-cols-6 gap-8">
                         <div class="col-span-3">
                             <label class="text-[11px] font-black text-slate-400 uppercase mb-2 block tracking-widest">Identificador (CPF/CNPJ)</label>
