--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
                         </div>
                         <div>
                             <p class="text-[10px] font-black text-orange-400 uppercase tracking-widest">Alinhamento Estratégico</p>
-                            <p id="ai-insight" class="text-white text-xs font-medium italic">Aguardando fluxo de dados para análise de autoridade...</p>
+                            <p id="ai-insight" class="text-white text-xs font-medium italic">Análise de autoridade...</p>
                         </div>
                     </div>
                     <div class="text-right">
-                        <span class="text-[9px] text-slate-400 block uppercase font-bold">Status Profético</span>
-                        <span class="text-emerald-400 text-[10px] font-black uppercase">Apocalipse 17: Mapeado</span>
+                        <span class="text-[9px] text-slate-400 block uppercase font-bold">Status</span>
+                        <span class="text-emerald-400 text-[10px] font-black uppercase">Mapeado</span>
                     </div>
                 </div>
 
@@ -183,7 +183,7 @@
                     <div class="flex items-center justify-between mb-10 border-b border-slate-100 pb-6">
                         <div class="flex items-center gap-4">
                             <div class="w-3 h-10 bg-orange-500 rounded-full shadow-lg shadow-orange-200"></div>
-                            <h2 class="text-xl font-black text-slate-700 uppercase italic">Central V12</h2>
+                            <h2 class="text-xl font-black text-slate-700 uppercase italic">Central</h2>
                         </div>
                         <div class="flex gap-2">
                              <label class="bg-blue-600 text-white px-4 py-2 rounded-lg text-[10px] font-black uppercase tracking-widest hover:bg-blue-700 transition-colors cursor-pointer">
@@ -229,10 +229,11 @@
                             <textarea id="descInput" class="input-tactical w-full h-32 font-normal text-slate-600" placeholder="Os itens bipados aparecerão aqui automaticamente..."></textarea>
                         </div>
                     </div>
+                    
                 </div>
             <div class="terminal-log shadow-xl">
                     <div class="flex justify-between border-b border-white/5 pb-2 mb-3">
-                        <span class="font-black text-[10px] uppercase tracking-[0.3em] text-orange-400">Security Stream & Gemini AI Advisor</span>
+                        <span class="font-black text-[10px] uppercase tracking-[0.3em] text-orange-400">Gemini AI Advisor</span>
                         <span class="text-[10px] text-slate-500 font-mono">NODE_ISR_V12</span>
                     </div>
                 
