--- a/index.html
+++ b/index.html
@@ -228,18 +228,11 @@
                             <label class="text-[11px] font-black text-slate-400 uppercase mb-2 block tracking-widest">Descrição do Ativo / Itens Escaneados</label>
                             <textarea id="descInput" class="input-tactical w-full h-32 font-normal text-slate-600" placeholder="Os itens bipados aparecerão aqui automaticamente..."></textarea>
                         </div>
-                    </div>
-                    
-                </div>
-            <div class="terminal-log shadow-xl">
-                    <div class="flex justify-between border-b border-white/5 pb-2 mb-3">
-                        <span class="font-black text-[10px] uppercase tracking-[0.3em] text-orange-400">Gemini AI Advisor</span>
-                        <span class="text-[10px] text-slate-500 font-mono">NODE_ISR_V12</span>
-                    </div>
-                
+                    </div>                    
+                </div>                         
                 <div class="terminal-log shadow-xl">
                     <div id="logContent" class="h-32 overflow-y-auto leading-relaxed">
-                        > Sistema S V12 Inicializado...<br>
+                        > Sistema Inicializado...<br>
                     </div>
                 </div>
             </div>
@@ -276,6 +269,11 @@
                             <span class="text-slate-400">GEO-POLITICA:</span>
                             <span class="text-orange-400 font-bold">HIGH</span>
                         </div>
+                        <div class="terminal-log shadow-xl">
+                    <div class="flex justify-between border-b border-white/5 pb-2 mb-3">
+                        <span class="font-black text-[10px] uppercase tracking-[0.3em] text-orange-400">Gemini AI Advisor</span>
+                        <span class="text-[10px] text-slate-500 font-mono">NODE_ISR_V12</span>
+                    </div>
                         <div class="w-full bg-slate-800 h-1 rounded-full overflow-hidden">
                             <div class="bg-orange-500 h-full w-[85%]"></div>
                         </div>
