--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         </div>
                         <div class="flex gap-2">
                            <label class="bg-blue-900 text-white px-7 py-5 rounded-lg text-[12px] font-black uppercase tracking-widest hover:bg-blue-800 transition-colors cursor-pointer">
-                             Leitor Nota Fiscal
+                             Leitor de Nota Fiscal
                                 <input type="file" class="hidden" onchange="v12NeuralOCR(this)">
                          </label>
                           <button id="btnScanner" onclick="toggleScanner()" class="bg-slate-900 text-white px-7 py-5 rounded-lg text-[12px] font-black uppercase tracking-widest hover:bg-orange-800 transition-colors">
